Thu May 25 15:23:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Attempt to build sleepycat support by default.  Also, try and make
	  it more obvious when something can't be found which is needed for
	  building requested support.

Thu May 25 15:22:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More useful exception message when support for a particular
	  database type is not compiled in.

Thu May 25 14:33:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Socketserver now updated to use the modified MultiMatch
	  interface.

Thu May 25 14:21:07 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made all MultiMatch::set_* methods private.  These are now called
	  from the constructor, based the arguments supplied to it.

	* MultiMatch now calls its submatchers prepare_match() at the end
	  of its constructor: this should fix the problems lately experienced
	  with network queries.

Thu May 25 12:07:29 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a simple test of the max_or_terms feature to apitest.

Thu May 25 12:06:06 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add max_or_terms member to localmatch, to store option in.

Wed May 24 17:55:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Separated collection of statistics and building of the query
	  tree in LocalMatch.  Added method which will be used to select
	  terms for use in the query when max_or_terms is in effect.

Wed May 24 16:37:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented get_doccount and get_avlength in NetworkDatabase.
	  Only 4 tests left failing with the net backend...

Wed May 24 12:50:19 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Exceptions are now propagated over the net link.

	* OmError's get_msg() method is now const.

Tue May 23 17:51:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
