@@ -1,3 +1,7 @@
+Thu May 25 17:28:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Implemented Termlist fetching for net backend.
+
 Thu May 25 15:23:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Attempt to build sleepycat support by default.  Also, try and make
